--- a/contact.html
+++ b/contact.html
@@ -12,12 +12,16 @@
 </head>
 <body>
 
+<!-- Floating WhatsApp & Phone -->
 <a href="https://wa.me/447915606500" class="whatsapp-btn" target="_blank"><i class="fab fa-whatsapp"></i></a>
 <a href="tel:07915606500" class="phone-btn"><i class="fas fa-phone"></i></a>
 
+<!-- Navbar -->
 <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
   <div class="container">
-    <a class="navbar-brand fw-bold" href="index.html"><img src="assets/images/logo.png" alt="Logo" height="40"></a>
+    <a class="navbar-brand fw-bold" href="index.html">
+      <img src="assets/images/logo.png" alt="Logo" height="40">
+    </a>
     <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#nav">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -32,12 +36,14 @@
   </div>
 </nav>
 
-<section id="contact" class="section">
+<!-- Contact Section -->
+<section id="contact" class="section" style="background: url('assets/images/analytics.jpg') no-repeat center center/cover;">
   <div class="container">
     <h1 class="text-center mb-5 text-white">Contact Us</h1>
     <div class="row g-4">
+      <!-- Contact Form -->
       <div class="col-md-6" data-aos="fade-right">
-        <form action="https://formspree.io/f/maylkvkp" method="POST">
+        <form action="https://formspree.io/f/mykkdden" method="POST">
           <div class="mb-3">
             <label class="form-label">Name</label>
             <input type="text" class="form-control" name="name" required>
@@ -53,31 +59,10 @@
           <button type="submit" class="btn btn-accent">Send Message</button>
         </form>
       </div>
+
+      <!-- Contact Details -->
       <div class="col-md-6" data-aos="fade-left">
         <h5>Contact Details</h5>
         <p><i class="fas fa-envelope me-2"></i>andrewmpeter201@gmail.com</p>
         <p><i class="fas fa-phone me-2"></i><a href="tel:07915606500" class="text-white">07915 606500</a></p>
         <h5 class="mt-4">Our Location</h5>
-        <div style="width:100%;height:250px;background:#e0e0e0;display:flex;align-items:center;justify-content:center;">
-          <span>Google Map Placeholder</span>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-
-<footer class="footer text-white mt-5">
-  <div class="container text-center">
-    <p>© 2026 Cypher Tech Solutions | 
-      <a href="mailto:andrewmpeter201@gmail.com" class="text-white">Email</a> | 
-      <a href="tel:07915606500" class="text-white">Phone</a> | 
-      <a href="about.html" class="text-white">About Us</a>
-    </p>
-  </div>
-</footer>
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-<script src="assets/js/main.js"></script>
-</body>
-</html>
