--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@
 </nav>
 
 <!-- Hero Section -->
-<section class="hero">
+<section class="hero d-flex align-items-center justify-content-center text-center">
   <div class="hero-overlay"></div>
-  <div class="container hero-content text-center" data-aos="fade-up">
+  <div class="container hero-content" data-aos="fade-up">
     <img src="assets/images/logo.png" alt="Owner" class="hero-image mb-3">
-    <h1>Smart Digital Solutions for Growing Businesses</h1>
-    <p class="lead">Web Development, Cybersecurity, Graphics, Analytics & Social Media Management</p>
-    <a href="contact.html" class="btn btn-accent btn-lg me-3">Start a Conversation</a>
-    <a href="tel:07915606500" class="btn btn-outline-light btn-lg">Call Now</a>
+    <h1 class="display-5 display-md-3">Smart Digital Solutions for Growing Businesses</h1>
+    <p class="lead mb-4">Web Development, Cybersecurity, Graphics, Analytics & Social Media Management</p>
+    <a href="contact.html" class="btn btn-accent btn-lg me-2 mb-2">Start a Conversation</a>
+    <a href="tel:07915606500" class="btn btn-outline-light btn-lg mb-2">Call Now</a>
   </div>
 </section>
 
@@ -54,38 +54,38 @@
 <section id="services" class="section bg-light">
   <div class="container">
     <h2 class="text-center mb-5">Our Services</h2>
-    <div class="row g-4">
-      <div class="col-md-4" data-aos="zoom-in">
-        <div class="service-card">
-          <i class="fas fa-code"></i>
+    <div class="row g-4 justify-content-center">
+      <div class="col-12 col-md-6 col-lg-4" data-aos="zoom-in">
+        <div class="service-card text-center">
+          <i class="fas fa-code mb-3"></i>
           <h5>Web Development</h5>
           <p>High-performance, secure websites optimized for small businesses.</p>
         </div>
       </div>
-      <div class="col-md-4" data-aos="zoom-in">
-        <div class="service-card">
-          <i class="fas fa-shield-halved"></i>
+      <div class="col-12 col-md-6 col-lg-4" data-aos="zoom-in">
+        <div class="service-card text-center">
+          <i class="fas fa-shield-halved mb-3"></i>
           <h5>Cyber Services</h5>
           <p>Security audits, protection, and recovery planning for your systems.</p>
         </div>
       </div>
-      <div class="col-md-4" data-aos="zoom-in">
-        <div class="service-card">
-          <i class="fas fa-palette"></i>
+      <div class="col-12 col-md-6 col-lg-4" data-aos="zoom-in">
+        <div class="service-card text-center">
+          <i class="fas fa-palette mb-3"></i>
           <h5>Graphics Design</h5>
           <p>Branding, marketing posters, and social media visuals that stand out.</p>
         </div>
       </div>
-      <div class="col-md-4" data-aos="zoom-in">
-        <div class="service-card">
-          <i class="fas fa-chart-line"></i>
+      <div class="col-12 col-md-6 col-lg-4" data-aos="zoom-in">
+        <div class="service-card text-center">
+          <i class="fas fa-chart-line mb-3"></i>
           <h5>Data Analytics</h5>
           <p>Actionable insights for smarter business decisions and growth.</p>
         </div>
       </div>
-      <div class="col-md-4" data-aos="zoom-in">
-        <div class="service-card">
-          <i class="fas fa-hashtag"></i>
+      <div class="col-12 col-md-6 col-lg-4" data-aos="zoom-in">
+        <div class="service-card text-center">
+          <i class="fas fa-hashtag mb-3"></i>
           <h5>Social Media Management</h5>
           <p>Strategic content planning and engagement to grow your online presence.</p>
         </div>
@@ -98,10 +98,10 @@
 <section id="work" class="section">
   <div class="container">
     <h2 class="text-center mb-5">Our Work</h2>
-    <div class="row g-4">
-      <div class="col-md-4"><img src="assets/images/web-project.jpg" class="img-fluid rounded shadow"></div>
-      <div class="col-md-4"><img src="assets/images/design-sample.jpg" class="img-fluid rounded shadow"></div>
-      <div class="col-md-4"><img src="assets/images/analytics.jpg" class="img-fluid rounded shadow"></div>
+    <div class="row g-4 justify-content-center">
+      <div class="col-12 col-md-6 col-lg-4"><img src="assets/images/web-project.jpg" class="img-fluid rounded shadow"></div>
+      <div class="col-12 col-md-6 col-lg-4"><img src="assets/images/design-sample.jpg" class="img-fluid rounded shadow"></div>
+      <div class="col-12 col-md-6 col-lg-4"><img src="assets/images/analytics.jpg" class="img-fluid rounded shadow"></div>
     </div>
   </div>
 </section>
