--- a/contact.html
+++ b/contact.html
@@ -66,3 +66,27 @@
         <p><i class="fas fa-envelope me-2"></i>andrewmpeter201@gmail.com</p>
         <p><i class="fas fa-phone me-2"></i><a href="tel:07915606500" class="text-white">07915 606500</a></p>
         <h5 class="mt-4">Our Location</h5>
+        <div style="width:100%;height:250px;background:#e0e0e0;display:flex;align-items:center;justify-content:center;">
+          <span>Google Map Placeholder</span>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<!-- Footer -->
+<footer class="footer text-white mt-5">
+  <div class="container text-center">
+    <p>© 2026 Cypher Tech Solutions | 
+      <a href="mailto:andrewmpeter201@gmail.com" class="text-white">Email</a> | 
+      <a href="tel:07915606500" class="text-white">Phone</a> | 
+      <a href="about.html" class="text-white">About Us</a>
+    </p>
+  </div>
+</footer>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script src="assets/js/main.js"></script>
+</body>
+</html>
