--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
   <div class="container">
     <a class="navbar-brand fw-bold" href="index.html">
-      <img src="assets/images/logo.png" alt="Cypher Tech Solutions" height="40">
+      <img src="assets/images/logo.png" alt="Cypher Tech Solutions" height="50">
     </a>
     <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#nav">
       <span class="navbar-toggler-icon"></span>
@@ -39,14 +39,15 @@
 </nav>
 
 <!-- Hero Section -->
-<section class="hero d-flex align-items-center justify-content-center text-center">
+<section class="hero d-flex align-items-start justify-content-center text-center">
   <div class="hero-overlay"></div>
-  <div class="container hero-content" data-aos="fade-up">
-    <img src="assets/images/logo.png" alt="Owner" class="hero-image mb-3">
-    <h1 class="display-5 display-md-3">Smart Digital Solutions for Growing Businesses</h1>
-    <p class="lead mb-4">Web Development, Cybersecurity, Graphics, Analytics & Social Media Management</p>
-    <a href="contact.html" class="btn btn-accent btn-lg me-2 mb-2">Start a Conversation</a>
-    <a href="tel:07915606500" class="btn btn-outline-light btn-lg mb-2">Call Now</a>
+  <div class="container hero-content" data-aos="fade-down">
+    <h1 class="display-3 fw-bold text-white mb-3">Smart Digital Solutions</h1>
+    <p class="lead slogan mb-4">Web Development, Cybersecurity, Graphics, Analytics & Social Media Management</p>
+    <div class="d-flex justify-content-center flex-wrap">
+      <a href="contact.html" class="btn btn-start btn-lg me-2 mb-2">Start a Conversation</a>
+      <a href="tel:07915606500" class="btn btn-call btn-lg mb-2">Call Now</a>
+    </div>
   </div>
 </section>
 
