--- a/contact.html
+++ b/contact.html
@@ -1,92 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-<meta charset="UTF-8">
-<title>Contact | Cypher Tech Solutions</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&family=Poppins:wght@600;700&display=swap" rel="stylesheet">
-<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+<title>Contact</title>
 <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
 
-<!-- Floating WhatsApp & Phone -->
-<a href="https://wa.me/447915606500" class="whatsapp-btn" target="_blank"><i class="fab fa-whatsapp"></i></a>
-<a href="tel:07915606500" class="phone-btn"><i class="fas fa-phone"></i></a>
-
-<!-- Navbar -->
-<nav class="navbar navbar-expand-lg navbar-dark fixed-top">
-  <div class="container">
-    <a class="navbar-brand fw-bold" href="index.html">
-      <img src="assets/images/logo.png" alt="Logo" height="40">
-    </a>
-    <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#nav">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="nav">
-      <ul class="navbar-nav ms-auto">
-        <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-        <li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
-        <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
-        <li class="nav-item"><a class="nav-link active" href="contact.html">Contact</a></li>
-      </ul>
-    </div>
-  </div>
+<nav class="navbar">
+<img src="assets/images/logo.png" height="40">
 </nav>
 
-<!-- Contact Section -->
-<section id="contact" class="section" style="background: url('assets/images/analytics.jpg') no-repeat center center/cover;">
-  <div class="container">
-    <h1 class="text-center mb-5 text-white">Contact Us</h1>
-    <div class="row g-4">
-      <!-- Contact Form -->
-      <div class="col-md-6" data-aos="fade-right">
-        <form action="https://formspree.io/f/mykkdden" method="POST">
-          <div class="mb-3">
-            <label class="form-label">Name</label>
-            <input type="text" class="form-control" name="name" required>
-          </div>
-          <div class="mb-3">
-            <label class="form-label">Email</label>
-            <input type="email" class="form-control" name="_replyto" required>
-          </div>
-          <div class="mb-3">
-            <label class="form-label">Message</label>
-            <textarea class="form-control" name="message" rows="5" required></textarea>
-          </div>
-          <button type="submit" class="btn btn-accent">Send Message</button>
-        </form>
-      </div>
-
-      <!-- Contact Details -->
-      <div class="col-md-6" data-aos="fade-left">
-        <h5>Contact Details</h5>
-        <p><i class="fas fa-envelope me-2"></i>andrewmpeter201@gmail.com</p>
-        <p><i class="fas fa-phone me-2"></i><a href="tel:07915606500" class="text-white">07915 606500</a></p>
-        <h5 class="mt-4">Our Location</h5>
-        <div style="width:100%;height:250px;background:#e0e0e0;display:flex;align-items:center;justify-content:center;">
-          <span>Google Map Placeholder</span>
-        </div>
-      </div>
-    </div>
-  </div>
+<section id="contact">
+  <h2>Contact Us</h2>
+  <form action="https://formspree.io/f/mykkdden" method="POST">
+    <input type="text" name="name" placeholder="Name" required>
+    <input type="email" name="email" placeholder="Email" required>
+    <textarea name="message" placeholder="Message"></textarea>
+    <button type="submit">Send</button>
+  </form>
 </section>
 
-<!-- Footer -->
-<footer class="footer text-white mt-5">
-  <div class="container text-center">
-    <p>© 2026 Cypher Tech Solutions | 
-      <a href="mailto:andrewmpeter201@gmail.com" class="text-white">Email</a> | 
-      <a href="tel:07915606500" class="text-white">Phone</a> | 
-      <a href="about.html" class="text-white">About Us</a>
-    </p>
-  </div>
-</footer>
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 <script src="assets/js/main.js"></script>
 </body>
 </html>
