--- a/index.html
+++ b/index.html
@@ -1,49 +1,137 @@
+<!-- index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<title>Cypher Tech Solutions</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8">
+  <title>Cypher Tech Solutions | Smart Digital Solutions</title>
+  <meta name="description" content="Cypher Tech Solutions provides smart digital, IT, cybersecurity, and design services for modern businesses.">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600;700&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="assets/css/style.css">
+  <!-- Bootstrap -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <!-- Font Awesome -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" rel="stylesheet">
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
+  <!-- AOS -->
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+  <!-- Custom CSS -->
+  <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
 
-<!-- Floating Icons TOP LEFT -->
-<a href="https://wa.me/447915606500" class="whatsapp-btn"><i class="fab fa-whatsapp"></i></a>
-<a href="tel:07915606500" class="phone-btn"><i class="fas fa-phone"></i></a>
-
-<!-- NAVBAR -->
 <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
   <div class="container">
-    <img src="assets/images/logo.png" height="45">
-    <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#nav">
+    <a class="navbar-brand fw-bold" href="index.html">Cypher Tech Solutions</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="nav">
-      <ul class="navbar-nav ms-auto">
-        <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
+    <div class="collapse navbar-collapse" id="mainNav">
+      <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+        <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
         <li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
-        <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+        <li class="nav-item"><a class="nav-link btn btn-accent ms-lg-3" href="contact.html">Contact</a></li>
       </ul>
     </div>
   </div>
 </nav>
 
-<!-- HERO -->
-<section class="hero-home">
-  <div class="hero-overlay"></div>
-  <div class="hero-center">
-    <h1 class="hero-title">Smart Digital Solutions</h1>
-    <p class="hero-slogan">Web • Cyber • Graphics • Analytics • Social Media</p>
-    <a href="contact.html" class="btn btn-orange">Start Conversation</a>
-    <a href="tel:07915606500" class="btn btn-orange">Call Now</a>
+<header class="hero-section text-white">
+  <div class="container text-center" data-aos="fade-up">
+    <h1 class="display-4 fw-bold">Cypher Tech Solutions</h1>
+    <p class="lead">Smart Digital Solutions for Modern Businesses</p>
+    <a href="contact.html" class="btn btn-lg btn-accent mt-3">Contact Us</a>
+  </div>
+</header>
+
+<section class="section">
+  <div class="container">
+    <div class="row align-items-center">
+      <div class="col-md-6" data-aos="fade-right">
+        <h2>About Us</h2>
+        <p>Cypher Tech Solutions delivers secure, efficient, and innovative technology services designed to help businesses thrive in a digital world.</p>
+      </div>
+      <div class="col-md-6" data-aos="fade-left">
+        <div class="info-card">
+          <i class="fas fa-shield-halved fa-3x mb-3 text-accent"></i>
+          <p>We combine expertise, reliability, and forward-thinking strategies.</p>
+        </div>
+      </div>
+    </div>
   </div>
 </section>
 
+<section class="section bg-light">
+  <div class="container">
+    <h2 class="text-center mb-5" data-aos="fade-up">Our Services</h2>
+    <div class="row g-4">
+      <div class="col-md-4" data-aos="zoom-in">
+        <div class="service-card">
+          <i class="fas fa-lock"></i>
+          <h5>Cyber Services</h5>
+          <p>Security audits, protection, and recovery.</p>
+        </div>
+      </div>
+      <div class="col-md-4" data-aos="zoom-in">
+        <div class="service-card">
+          <i class="fas fa-paint-brush"></i>
+          <h5>Graphic Design</h5>
+          <p>Branding and visual communication.</p>
+        </div>
+      </div>
+      <div class="col-md-4" data-aos="zoom-in">
+        <div class="service-card">
+          <i class="fas fa-desktop"></i>
+          <h5>IT Support</h5>
+          <p>Reliable setup and troubleshooting.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section class="section">
+  <div class="container">
+    <h2 class="text-center mb-5" data-aos="fade-up">Why Choose Us</h2>
+    <div class="row g-4">
+      <div class="col-md-3" data-aos="flip-left">
+        <div class="info-card">Expert Team</div>
+      </div>
+      <div class="col-md-3" data-aos="flip-left">
+        <div class="info-card">Secure Solutions</div>
+      </div>
+      <div class="col-md-3" data-aos="flip-left">
+        <div class="info-card">Modern Technology</div>
+      </div>
+      <div class="col-md-3" data-aos="flip-left">
+        <div class="info-card">Client Focused</div>
+      </div>
+    </div>
+  </div>
+</section>
+
+<section class="section bg-light">
+  <div class="container">
+    <h2 class="text-center mb-5">Testimonials</h2>
+    <p class="text-center fst-italic">"Professional, secure, and efficient solutions!"</p>
+  </div>
+</section>
+
+<section class="cta-section text-white text-center">
+  <div class="container">
+    <h2>Ready to get started?</h2>
+    <a href="contact.html" class="btn btn-lg btn-accent mt-3">Get in Touch</a>
+  </div>
+</section>
+
+<footer class="footer text-white">
+  <div class="container text-center">
+    <p>&copy; 2026 Cypher Tech Solutions. All rights reserved.</p>
+  </div>
+</footer>
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script src="assets/js/main.js"></script>
 </body>
 </html>
