--- a/contact.html
+++ b/contact.html
@@ -1,25 +1,46 @@
+<!-- contact.html -->
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<title>Contact</title>
-<link rel="stylesheet" href="assets/css/style.css">
+  <meta charset="UTF-8">
+  <title>Contact | Cypher Tech Solutions</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
 
-<nav class="navbar">
-<img src="assets/images/logo.png" height="40">
+<nav class="navbar navbar-expand-lg navbar-dark fixed-top">
+  <div class="container">
+    <a class="navbar-brand fw-bold" href="index.html">Cypher Tech Solutions</a>
+  </div>
 </nav>
 
-<section id="contact">
-  <h2>Contact Us</h2>
-  <form action="https://formspree.io/f/mykkdden" method="POST">
-    <input type="text" name="name" placeholder="Name" required>
-    <input type="email" name="email" placeholder="Email" required>
-    <textarea name="message" placeholder="Message"></textarea>
-    <button type="submit">Send</button>
-  </form>
+<section class="section mt-5 pt-5">
+  <div class="container">
+    <h1 class="text-center mb-4">Contact Us</h1>
+    <div class="row justify-content-center">
+      <div class="col-md-6">
+        <form action="https://formspree.io/f/xyzzabcd" method="POST" class="contact-form">
+          <input type="text" name="name" class="form-control mb-3" placeholder="Your Name" required>
+          <input type="email" name="email" class="form-control mb-3" placeholder="Your Email" required>
+          <textarea name="message" class="form-control mb-3" placeholder="Your Message" rows="5" required></textarea>
+          <button class="btn btn-accent w-100" type="submit">Send Message</button>
+        </form>
+      </div>
+    </div>
+  </div>
 </section>
 
+<footer class="footer text-white">
+  <div class="container text-center">
+    <p>&copy; 2026 Cypher Tech Solutions</p>
+  </div>
+</footer>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 <script src="assets/js/main.js"></script>
 </body>
 </html>
