--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <title>Contact | Cypher Tech Solutions</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
@@ -12,7 +13,7 @@
 </head>
 <body>
 
-<nav class="navbar navbar-expand-lg navbar-dark fixed-top">
+<nav class="navbar navbar-dark fixed-top">
   <div class="container">
     <a class="navbar-brand fw-bold" href="index.html">Cypher Tech Solutions</a>
   </div>
@@ -23,12 +24,20 @@
     <h1 class="text-center mb-4">Contact Us</h1>
     <div class="row justify-content-center">
       <div class="col-md-6">
-        <form action="https://formspree.io/f/xyzzabcd" method="POST" class="contact-form">
+        <form action="https://formspree.io/f/xqkrnqzg" method="POST" class="contact-form">
           <input type="text" name="name" class="form-control mb-3" placeholder="Your Name" required>
           <input type="email" name="email" class="form-control mb-3" placeholder="Your Email" required>
-          <textarea name="message" class="form-control mb-3" placeholder="Your Message" rows="5" required></textarea>
-          <button class="btn btn-accent w-100" type="submit">Send Message</button>
+          <textarea name="message" class="form-control mb-3" rows="5" placeholder="Your Message" required></textarea>
+          <button type="submit" class="btn btn-accent w-100">Send Message</button>
         </form>
+        <div class="contact-info text-center mt-4">
+          <p>
+            <i class="fas fa-phone"></i>
+            <a href="tel:07915606500">07915 606500</a><br>
+            <i class="fas fa-envelope"></i>
+            <a href="mailto:andrewmpeter201@gmail.com">andrewmpeter201@gmail.com</a>
+          </p>
+        </div>
       </div>
     </div>
   </div>
@@ -41,6 +50,5 @@
 </footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-<script src="assets/js/main.js"></script>
 </body>
 </html>
