--- a/index.html
+++ b/index.html
@@ -1,140 +1,119 @@
-<!-- index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Cypher Tech Solutions | Smart Digital Solutions</title>
-  <meta name="description" content="Cypher Tech Solutions provides smart digital, IT, cybersecurity, and design services for modern businesses.">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta charset="UTF-8">
+<title>Cypher Tech Solutions | Home</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="description" content="Web development, cybersecurity, graphics, analytics & digital solutions for growing businesses.">
 
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
-  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-  <link rel="stylesheet" href="assets/css/style.css">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&family=Poppins:wght@600;700&display=swap" rel="stylesheet">
+<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+<link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
 
+<!-- Floating WhatsApp & Phone -->
+<a href="https://wa.me/447915606500" class="whatsapp-btn" target="_blank"><i class="fab fa-whatsapp"></i></a>
+<a href="tel:07915606500" class="phone-btn"><i class="fas fa-phone"></i></a>
+
+<!-- Navbar -->
 <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
   <div class="container">
-    <a class="navbar-brand fw-bold" href="index.html">Cypher Tech Solutions</a>
-    <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#mainNav">
+    <a class="navbar-brand fw-bold" href="index.html">
+      <img src="assets/images/logo.png" alt="Cypher Tech Solutions" height="40">
+    </a>
+    <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#nav">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="mainNav">
+    <div class="collapse navbar-collapse" id="nav">
       <ul class="navbar-nav ms-auto">
         <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
         <li class="nav-item"><a class="nav-link" href="services.html">Services</a></li>
-        <li class="nav-item">
-          <a class="nav-link btn btn-accent ms-lg-3" href="contact.html">Contact</a>
-        </li>
+        <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+        <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
       </ul>
     </div>
   </div>
 </nav>
 
-<header class="hero-section text-white">
-  <div class="container text-center" data-aos="fade-up">
-    <h1 class="display-4 fw-bold">Cypher Tech Solutions</h1>
-    <p class="lead">Smart Digital Solutions for Modern Businesses</p>
-    <div class="hero-actions">
-      <a href="contact.html" class="btn btn-lg btn-accent me-3">Contact Us</a>
-      <a href="tel:07915606500" class="btn btn-lg btn-outline-light">
-        <i class="fas fa-phone"></i> Call Us
-      </a>
-    </div>
-  </div>
-</header>
-
-<section class="section">
-  <div class="container">
-    <div class="row align-items-center g-4">
-      <div class="col-md-6" data-aos="fade-right">
-        <h2>About Cypher Tech Solutions</h2>
-        <p>
-          We help businesses stay secure, modern, and efficient through expert IT,
-          cybersecurity, digital design, and automation services.
-        </p>
-        <p class="fw-semibold">
-          <i class="fas fa-envelope text-accent"></i>
-          <a href="mailto:andrewmpeter201@gmail.com">andrewmpeter201@gmail.com</a><br>
-          <i class="fas fa-phone text-accent"></i>
-          <a href="tel:07915606500">07915 606500</a>
-        </p>
-      </div>
-      <div class="col-md-6" data-aos="fade-left">
-        <div class="highlight-card">
-          <h5>Trusted Technology Partner</h5>
-          <p>
-            We deliver reliable, scalable, and secure solutions tailored to your needs.
-          </p>
-        </div>
-      </div>
-    </div>
+<!-- Hero Section -->
+<section class="hero d-flex align-items-center justify-content-center text-center">
+  <div class="hero-overlay"></div>
+  <div class="container hero-content" data-aos="fade-up">
+    <img src="assets/images/logo.png" alt="Owner" class="hero-image mb-3">
+    <h1 class="display-5 display-md-3">Smart Digital Solutions for Growing Businesses</h1>
+    <p class="lead mb-4">Web Development, Cybersecurity, Graphics, Analytics & Social Media Management</p>
+    <a href="contact.html" class="btn btn-accent btn-lg me-2 mb-2">Start a Conversation</a>
+    <a href="tel:07915606500" class="btn btn-outline-light btn-lg mb-2">Call Now</a>
   </div>
 </section>
 
-<section class="section bg-light">
+<!-- Services Preview -->
+<section id="services" class="section bg-light">
   <div class="container">
-    <h2 class="text-center mb-5" data-aos="fade-up">Our Core Services</h2>
-    <div class="row g-4">
-      <div class="col-md-4" data-aos="zoom-in">
-        <div class="service-card">
-          <i class="fas fa-shield-halved"></i>
+    <h2 class="text-center mb-5">Our Services</h2>
+    <div class="row g-4 justify-content-center">
+      <div class="col-12 col-md-6 col-lg-4" data-aos="zoom-in">
+        <div class="service-card text-center">
+          <i class="fas fa-code mb-3"></i>
+          <h5>Web Development</h5>
+          <p>High-performance, secure websites optimized for small businesses.</p>
+        </div>
+      </div>
+      <div class="col-12 col-md-6 col-lg-4" data-aos="zoom-in">
+        <div class="service-card text-center">
+          <i class="fas fa-shield-halved mb-3"></i>
           <h5>Cyber Services</h5>
-          <p>Security audits, protection, and data recovery.</p>
+          <p>Security audits, protection, and recovery planning for your systems.</p>
         </div>
       </div>
-      <div class="col-md-4" data-aos="zoom-in">
-        <div class="service-card">
-          <i class="fas fa-paint-brush"></i>
-          <h5>Graphic Design</h5>
-          <p>Branding, posters, and social media designs.</p>
+      <div class="col-12 col-md-6 col-lg-4" data-aos="zoom-in">
+        <div class="service-card text-center">
+          <i class="fas fa-palette mb-3"></i>
+          <h5>Graphics Design</h5>
+          <p>Branding, marketing posters, and social media visuals that stand out.</p>
         </div>
       </div>
-      <div class="col-md-4" data-aos="zoom-in">
-        <div class="service-card">
-          <i class="fas fa-desktop"></i>
-          <h5>IT Support</h5>
-          <p>PCs, networks, printers, and troubleshooting.</p>
+      <div class="col-12 col-md-6 col-lg-4" data-aos="zoom-in">
+        <div class="service-card text-center">
+          <i class="fas fa-chart-line mb-3"></i>
+          <h5>Data Analytics</h5>
+          <p>Actionable insights for smarter business decisions and growth.</p>
+        </div>
+      </div>
+      <div class="col-12 col-md-6 col-lg-4" data-aos="zoom-in">
+        <div class="service-card text-center">
+          <i class="fas fa-hashtag mb-3"></i>
+          <h5>Social Media Management</h5>
+          <p>Strategic content planning and engagement to grow your online presence.</p>
         </div>
       </div>
     </div>
   </div>
 </section>
 
-<section class="section">
+<!-- Projects -->
+<section id="work" class="section">
   <div class="container">
-    <h2 class="text-center mb-5" data-aos="fade-up">Why Choose Us</h2>
-    <div class="row g-4">
-      <div class="col-md-3" data-aos="flip-left"><div class="info-card">Experienced Professionals</div></div>
-      <div class="col-md-3" data-aos="flip-left"><div class="info-card">Strong Security Focus</div></div>
-      <div class="col-md-3" data-aos="flip-left"><div class="info-card">Fast Response Time</div></div>
-      <div class="col-md-3" data-aos="flip-left"><div class="info-card">Affordable Solutions</div></div>
+    <h2 class="text-center mb-5">Our Work</h2>
+    <div class="row g-4 justify-content-center">
+      <div class="col-12 col-md-6 col-lg-4"><img src="assets/images/web-project.jpg" class="img-fluid rounded shadow"></div>
+      <div class="col-12 col-md-6 col-lg-4"><img src="assets/images/design-sample.jpg" class="img-fluid rounded shadow"></div>
+      <div class="col-12 col-md-6 col-lg-4"><img src="assets/images/analytics.jpg" class="img-fluid rounded shadow"></div>
     </div>
   </div>
 </section>
 
-<section class="cta-section text-white text-center">
-  <div class="container">
-    <h2>Need Reliable Tech Support?</h2>
-    <p>Call or message us today and let’s get started.</p>
-    <a href="tel:07915606500" class="btn btn-lg btn-accent mt-3">
-      <i class="fas fa-phone"></i> 07915 606500
-    </a>
-  </div>
-</section>
-
-<footer class="footer text-white">
+<!-- Footer -->
+<footer class="footer text-white mt-5">
   <div class="container text-center">
-    <p>
-      <i class="fas fa-envelope"></i>
-      <a href="mailto:andrewmpeter201@gmail.com" class="text-white">andrewmpeter201@gmail.com</a>
-      |
-      <i class="fas fa-phone"></i>
-      <a href="tel:07915606500" class="text-white">07915 606500</a>
+    <p>© 2026 Cypher Tech Solutions | 
+      <a href="mailto:andrewmpeter201@gmail.com" class="text-white">Email</a> | 
+      <a href="tel:07915606500" class="text-white">Phone</a> | 
+      <a href="about.html" class="text-white">About Us</a>
     </p>
-    <p>&copy; 2026 Cypher Tech Solutions</p>
   </div>
 </footer>
 
