--- a/about.html
+++ b/about.html
@@ -1,19 +1,27 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<title>About</title>
+<meta charset="UTF-8">
+<title>About | Cypher Tech Solutions</title>
 <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
+<nav class="navbar navbar-dark" style="background:#0B1C2D;">
+  <div class="container"><a href="index.html"><img src="assets/images/logo.png" height="45"></a></div>
+</nav>
 
-<section class="work-section">
-  <h2>About Cypher Tech Solutions</h2>
-  <p>We deliver secure, scalable, and human-focused digital solutions.</p>
+<section class="section bg-light">
+  <div class="container">
+    <h2>About Us</h2>
+    <p>We are Cypher Tech Solutions. We provide secure, scalable, and creative digital solutions for businesses and startups. Fast delivery, professional quality, and affordable pricing set us apart.</p>
+    <h3 class="mt-4">Why Choose Us</h3>
+    <ul>
+      <li>Fast delivery</li>
+      <li>Clean professional work</li>
+      <li>Affordable pricing</li>
+      <li>Support after delivery</li>
+    </ul>
+  </div>
 </section>
-
-<footer>
-  <a href="about.html">About Us</a>
-</footer>
-
 </body>
 </html>
