--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Cypher Tech Solutions</title>
+<title>Cypher Tech Solutions | Home</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" rel="stylesheet">
@@ -16,9 +16,11 @@
 <a href="tel:07915606500" class="phone-btn"><i class="fas fa-phone"></i></a>
 
 <!-- Navbar -->
-<nav class="navbar navbar-expand-lg navbar-dark fixed-top" style="background:#0B1C2D;">
+<nav class="navbar navbar-expand-lg navbar-dark fixed-top">
   <div class="container">
-    <a class="navbar-brand fw-bold" href="index.html"><img src="assets/images/logo.png" height="45" alt="Logo"></a>
+    <a class="navbar-brand" href="index.html">
+      <img src="assets/images/logo.png" height="60" alt="Cypher Tech Solutions">
+    </a>
     <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#nav">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -29,23 +31,26 @@
         <li class="nav-item"><a class="nav-link" href="portfolio.html">Portfolio</a></li>
         <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
         <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
-        <li class="nav-item"><a class="btn btn-primary ms-2" href="contact.html">Get a Quote</a></li>
       </ul>
     </div>
   </div>
 </nav>
 
-<!-- Hero Section -->
-<section class="hero-home">
-  <div class="hero-overlay"></div>
-  <div class="hero-center text-center">
-    <h1 class="hero-title">We help your brand grow online</h1>
-    <p class="hero-slogan">Cyber Services • Web Development • Graphics Design • Video Editing</p>
+<!-- Hero Slider -->
+<section id="hero-slider" class="hero-slider">
+  <div class="slide active" style="background-image: url('assets/images/bg1.jpg');"></div>
+  <div class="slide" style="background-image: url('assets/images/bg2.jpg');"></div>
+  <div class="slide" style="background-image: url('assets/images/bg3.jpg');"></div>
+
+  <div class="hero-content text-center">
+    <h1 class="hero-title">We Help Your Brand Grow Online</h1>
+    <p class="hero-slogan">Cyber Services · Web Development · Graphics · Video Editing</p>
     <a href="portfolio.html" class="btn btn-electric me-2">View Our Work</a>
     <a href="contact.html" class="btn btn-teal">Contact Us</a>
   </div>
 </section>
 
+<script src="assets/js/heroSlider.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
